<resources>
    <string name="about">About Us</string>
    <string name="about_made_by">Made by Cornell App Development</string>
    <string name="about_proj_team">An Engineering Project Team at Cornell University. View more of our apps here.</string>
    <string name="about_clickable_here">here.</string>
    <string name="about_onboarding">VIEW ONBOARDING</string>
    <string name="about_feedback">SEND FEEDBACK</string>
    <string name="about_website">VISIT OUR WEBSITE</string>
    <string name="alerts">Service Alerts</string>
    <string name="all_routes">See all route options</string>
    <string name="app_name">ithaca-transit</string>
    <string name="appdev_google_play">https://play.google.com/store/apps/developer?id=Cornell+AppDev</string>
    <string name="appdev_website">https://www.cornellappdev.com/</string>
    <string name="feedback">Send Feedback</string>
    <string name="field_arrival_time">arrivalTime</string>
    <string name="field_bounding_box">boundingBox</string>
    <string name="field_data">data</string>
    <string name="field_delay">delay</string>
    <string name="field_departure_time">departureTime</string>
    <string name="field_detail">detail</string>
    <string name="field_directions">directions</string>
    <string name="field_distance">distance</string>
    <string name="field_end_coords">endCoords</string>
    <string name="field_end_time">endTime</string>
    <string name="field_id">id</string>
    <string name="field_latitude">lat</string>
    <string name="field_longitude">long</string>
    <string name="field_name">name</string>
    <string name="field_number_of_transfers">numberOfTransfers</string>
    <string name="field_path">path</string>
    <string name="field_route_number">routeNumber</string>
    <string name="field_start_coords">startCoords</string>
    <string name="field_start_time">startTime</string>
    <string name="field_stay_on_bus">stayOnBusForTransfer</string>
    <string name="field_stops">stops</string>
    <string name="field_trip_identifiers">tripIdentifiers</string>
    <string name="field_type">type</string>
    <string name="method_get">GET</string>
    <string name="method_post">POST</string>
    <string name="notify">Notifications</string>
    <string name="get_method_allstops">allstops</string>
    <string name="home_menu_title">Ithaca Transit</string>
    <string name="query_delay"><![CDATA[delay?&stopID=%d&tripID=%d]]></string>
    <string name="query_route">
        <![CDATA[route?&start=%s&end=%s&time=%d&arriveBy=%b&destinationName=%s]]></string>
    <string name="query_search">search</string>
    <string name="search_hint">Where to?</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_maps">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="version_not_found">Version not found.</string>
    <string name="google_maps_key">AIzaSyDnnP6flqM2O-E6om1mJVMM022Tfng4zZE
    </string>
</resources>