<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/AppTheme">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/background">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#009cdf">

            <ImageButton
                android:id="@+id/about_menu_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/menu"
                android:paddingRight="20dp"
                android:background="@null"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/white"
                android:text="@string/about"/>

        </android.support.v7.widget.Toolbar>

        <ImageView
            android:id="@+id/bus"
            android:layout_width="240dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:src="@drawable/tcat_bus" />

        <TextView
            android:id="@+id/made_by_text"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bus"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/about_made_by" />

        <TextView
            android:id="@+id/about_proj_team"
            android:layout_width="270dp"
            android:textSize="15.1sp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_below="@+id/made_by_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:text="@string/about_proj_team"
            android:textColor="#8B000000"
            android:textColorLink="#8B000000"/>

        <!--<Button-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:id="@+id/about_onboarding"-->
            <!--android:layout_width="900dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@color/buttonBackground"-->
            <!--android:layout_below="@+id/about_proj_team"-->
            <!--android:layout_margin="10dp"-->
            <!--android:textColor="@color/blue"-->
            <!--android:text="@string/about_onboarding"/>-->

        <Button
            android:layout_centerHorizontal="true"
            android:id="@+id/about_feedback"
            android:layout_width="900dp"
            android:layout_height="wrap_content"
            android:background="@color/buttonBackground"
            android:layout_below="@+id/about_proj_team"
            android:layout_margin="10dp"
            android:textColor="@color/blue"
            android:text="@string/about_feedback"/>

        <Button
            android:layout_centerHorizontal="true"
            android:id="@+id/about_website"
            android:layout_width="900dp"
            android:layout_height="wrap_content"
            android:background="@color/buttonBackground"
            android:layout_below="@id/about_feedback"
            android:layout_margin="10dp"
            android:textColor="@color/blue"
            android:text="@string/about_website"/>

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/about_menu"
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#fff"
        app:menu="@menu/home_drawer_menu"
        app:headerLayout="@layout/home_drawer_header" />

</android.support.v4.widget.DrawerLayout>